Fixed overflow issues of description text

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -54,7 +54,7 @@ body {
 
 .description-text {
   width: 100%;
-  max-width: 445px;
+  max-width: 440px;
 }
 
 .image {
